Revert "Chore/project service (#9)"
This reverts commit 8f7c7fab20012345d381615b287dc582c4eb6a3d.
