# service-projects/src/main/java/org/opendevstack/apiservice/serviceproject/model/CreateProjectRequest.java
@@ -1,19 +1,19 @@
 package org.opendevstack.apiservice.serviceproject.model;
 
 import lombok.AllArgsConstructor;
-import lombok.Builder;
 import lombok.Data;
 import lombok.NoArgsConstructor;
 
 @Data
 @NoArgsConstructor
 @AllArgsConstructor
-@Builder
-public class ProjectResponse {
+public class CreateProjectRequest {
     
     private String projectKey;
     
-    private Status status;
+    private String projectKeyPattern;
     
-    private String projectFlavor;
+    private String projectName;
+    
+    private String projectDescription;
 }
